2005-05-20  Emmanuel Dreyfus  <manu@netbsd.org>

	From Larry Baird <lab@gta.com>
	* src/racoon/{handler.c|ipsec_doi.c|remoteconf.h|remoteconf.c}: When 
	  altering lifetime, duplicate the proposal instead of modifying 
	  the configured one.

2005-05-14  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/libipsec/policy_parse.y: fix parse bug in IPsec policies

2005-05-13  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/isakmp.c: For acquire messages, when NAT-T is in use,
	  consider null port as a wildcard and use IKE port

2005-05-13  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp.c: Fixed a double ph2handler free in
	  isakmp_ph2begin_i().

---------------------------------------------

	0.6b2 released

2005-05-10  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/samples/roadwarrior/client/racoon.conf
	  src/racoon/samples/roadwarrior/server/{racoon.conf|racoon.conf-radius}
	  src/racoon/samples/roadwarrior/server/phase1-down.sh: removed file
	  src/racoon/samples/roadwarrior/README: update config files to 
	  higher security settings. Remove now useless phase 1 down 
	  script on server side.

	* src/racoon/ipsec_doi.c: check for lifebyte in proposals
	* src/racoon/ipsec_doi.c: fix a bug in proposal_check claim for phase 1

	* src/racoon/{cfparse.y|cftoken.l|racoon.conf.5|isakmp_cfg.c}
	  src/racoon/{isakmp_cfg.h|isakmp_unity.c}: add Cisco extensions for
	  pushing PFS group and save password setting through ISAKMP mode cfg

2005-05-07  Emmanuel Dreyfus  <manu@netbsd.org>

	* src/racoon/{admin.c|isakmp.c|isakmp_inf.c}: factor various
	  ISAKMP SA termination (for DPD timeouts and delete message) to
	  use purge_remote() so that SA and generated SPD get correctly flushed
	* src/racoon/{handler.c|handler.h}: Introduce getph1byaddrwop() and
	  getph2bysaddr()
	* src/racoon/{isakmp.c|isakmp_var.h|isakmp_inf.c|isakmp_inf.h}: make
	  purge_remote(), setcopeid() and delete_spd() public
	* src/racoon/isakmp_quick.c: remove duplicated setscopeid()